Summary: new endpoint and some fixes in executor
