# Flowcraft/FlowEngine/src/main/java/api/service/TaskService.java
@@ -1,30 +1,38 @@
-//package api.service;
-//
-//
-//import com.database.entity.generated.tables.pojos.InstanceHistory;
-//import com.database.entity.generated.tables.pojos.InstanceTasks;
-//import persistence.repository.impl.TaskRepository;
-//
-//import java.util.List;
-//import java.util.UUID;
-//import java.util.stream.Collectors;
-//
-//public class TaskService  {
-////    private final TaskRepository taskRepository;
-////
-////    public TaskService(TaskRepository taskRepository) {
-////        this.taskRepository = taskRepository;
-////    }
-////
-////    public InstanceTasks getInstanceHistory(UUID id) {
-////        return taskRepository.getById(id).into(InstanceTasks.class);
-////    }
-////
-////    public List<InstanceTasks> getAllInstanceHistory(String processName) {
-////        return taskRepository.getAll(processName);
-////    }
-////
-////    public List<InstanceTasks> getAllTasks(String processN) {
-////       // return taskRepository.getById(processName, id);
-////    }
-//}
+package api.service;
+
+import api.dto.TaskDto;
+import com.database.entity.generated.tables.pojos.InstanceTasks;
+import engine.model.BpmnElement;
+import persistence.repository.impl.TaskRepository;
+
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
+public class TaskService {
+    TaskRepository taskRepository;
+    Map<String, BpmnElement> bpmnElements;
+
+    public TaskService(TaskRepository taskRepository, Map<String, BpmnElement> bpmnElements) {
+        this.taskRepository = taskRepository;
+        this.bpmnElements = bpmnElements;
+    }
+
+    public List<TaskDto> getAllTasksByInstanceId(String processName, UUID instanceId) {
+        return taskRepository.getAll(processName, instanceId)
+                .stream()
+                .map(task -> new TaskDto(
+                        task.getBpmnElementId(),
+                        getTaskName(task.getBpmnElementId()),
+                        task.getStatus(),
+                        task.getStartTime(),
+                        task.getEndTime()
+                ))
+                .toList();
+     }
+
+    private String getTaskName(String bpmnElementId) {
+        return bpmnElements.get(bpmnElementId).getName();
+    }
+}
